--- a/views/index.html
+++ b/views/index.html
@@ -135,7 +135,9 @@
             <div data-string="revokeInfo"></div>
             <div class="transaction-hex"></div>
             <div class="refund-info" data-string="refundAddressInfo"></div>
+            <div class="refund-warning" data-string="refundAddressWarning"></div>
             <input class="refund-address" />
+            <div class="disable-button" data-string="disableAutoRefund"></div>
           </div>
 
           <div id="donateForm" class="hidden">
