--- a/views/index.html
+++ b/views/index.html
@@ -238,6 +238,7 @@
         <div class="tab-container">
             <div id="web-wallet" class="tab active">
                 <div data-string="webWalletInfo" class="web-wallet-info"></div>
+                <div data-string="webWalletWarning" class="web-wallet-warning"></div>
                 <div data-string="privateKeyInfo" class="private-key-button"></div>
                 <div class="private-key"></div>
                 <div class="address"></div>
