--- a/views/index.html
+++ b/views/index.html
@@ -429,11 +429,19 @@
   </section>
 
   <section>
-    <h3 style="float: left;">
-      <span class="valign-wrapper" style="float: left;">
+    <h3 class="valign-wrapper">
+      <span class="valign-wrapper">
         <i class="icon-favorite_border"></i>
         <b id="campaignContributorCount">0</b>
         <span data-string="contributorsLabel"></span>
+      </span>
+      <span 
+        style="margin-left: auto;"
+        class="valign-wrapper sorting-button" 
+        id="sortContributorButton"
+      >
+        <span id="campaignContributorSortLabel" data-string="largestFirst"></span>
+        <img src="/static/img/sort.svg" alt="">
       </span>
     </h3>
     <hr>
