--- a/views/index.html
+++ b/views/index.html
@@ -72,6 +72,7 @@
 
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://www.flipstarter.cash/">
+  <meta property="og:image" content="<!-- social_preview -->">
   <meta property="og:article:section" content="Technology">
   <meta property="og:article:tag" content="Bitcoin">
   <meta property="og:article:tag" content="Bitcoin Cash">
